test/errors/fieldnotfound/main.sk
module Main {

struct Object {

}

fn main() {
    let a = Object();
    a.foo;
}

}
